fix image slider box-shadow overlapping bug

--- a/src/components/Testimonials/Testimonials.scss
+++ b/src/components/Testimonials/Testimonials.scss
@@ -83,5 +83,7 @@
 
   & .review {
     max-height: 300px;
+    margin-left: 15px !important;
+    margin-right: 15px !important;
   }
 }
